@@ -44,5 +44,5 @@ Thoguluva Rajendran, Prasanna
   - addition of bin/taylor_green_vortex.*
  
 Weerakoon, Minindu
-  - Fixes to memory leaks problems (see CHANGELOG 19feb23a and 19feb27a) 
+  - Fixes to memory leaks problems (see CHANGELOG 19feb23a and 19feb27a and 19feb28b) 
 
